2005-09-02  Kevin Buettner  <kevinb@redhat.com>

	* mn10300-tdep.c (is_my_frame_in_sp, is_my_frame_in_fp)
	(is_my_frame_last): Delete these unused functions.

2005-09-02  Kevin Buettner  <kevinb@redhat.com>

	* mn10300-tdep.c (mn10300_frame_prev_register): Change type of
	``bufferp'' from ``void *'' to ``gdb_byte *''.

2005-09-02  Kevin Buettner  <kevinb@redhat.com>

	* mn10300-tdep.c (mn10300_use_struct_convention): Delete parameter
	``gcc_p''.  Adjust all callers.
	(mn10300_store_return_value, mn10300_extract_return_value): Add new
	parameter ``gdbarch''.
	(mn10300_return_value): New function.
	(mn10300_gdbarch_init): Delete old-style return value code calls.
	Add call to set_gdbarch_return_value().

2005-09-02  Kevin Buettner  <kevinb@redhat.com>
	
	* mn10300-tdep.c (regcache.h): Delete duplicate include.
	* Makefile.in (mn10300-tdep.o): Update dependencies.

2005-09-02  Kevin Buettner  <kevinb@redhat.com>

	* mn10300-tdep.c (osabi.h): Include.
	(mn10300_gdbarch_init): Invoke gdbarch_init_osabi().
	* Makefile.in (mn10300-tdep.o): Update dependencies.

2005-09-02  Michael Snyder  <msnyder@redhat.com>
            Kevin Buettner  <kevinb@redhat.com>

	* mn10300-linux-tdep.c: New file.
	* Makefile.in (mn10300-linux-tdep.o): New Makefile target.
	* config/mn10300/linux.mt (TDEPFILES): Add mn10300-linux-tdep.o and
	corelow.o.
	* mn10300-tdep.h (E_E8_REGNUM, E_E9_REGNUM, E_E10_REGNUM)
	(E_FPCR_REGNUM, E_FS0_REGNUM): New constants.

2005-09-02  Mark Kettenis  <kettenis@gnu.org>

	* infcall.c (call_function_by_hand): Remove code handling
	deprecated_push_arguments.  Bail out early if push_dummy_call
	isn't available.
	* gdbarch.sh (deprecated_push_arguments): Delete.  Adjust a few
	comments accordingly.
	* gdbarch.h, gdbarch.c: Regenerate.

2005-09-01  Paul Gilliam  <pgilliam@us.ibm.com>

        * ppc-tdep.h (struct gdbarch_tdep): Better explanation of using
        -1 for nonexistant registers.
        * rs6000-tdep.c (rs6000_register_reggroup_p): Don't assume that